--- a/00-References.Rmd
+++ b/00-References.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "References"
 description: |
-  Some additional details about the website
+  Some additional details coming soon :)
 output:
   distill::distill_article:
     toc: true
@@ -10,15 +10,4 @@ repository_url: https://github.com/LF2L/everest-bio
 ---
 
 
-# Recycling for additive Manufacturing
-
-# Developpement durable
-
-## 2020
-
- 
-
-
----
-
-Coming soon more ! `r emo::ji("smile")`
+Coming soon ! `r emo::ji("smile")`
