--- a/docs/slides/index.Rmd
+++ b/docs/slides/index.Rmd
@@ -70,14 +70,7 @@ background-size: contain
 # Smart Collector
 
 .pull-left[ 
-- US recycled less than 9% of its plastic waste.
-- EU, recycled about 30%. However, this number is what is collected, not from what is in circulation*. 
-- China’s ban on plastic trash
-- Plastic trash could top 13 billion tons by 2050
-- Economics of plastic recycling historically have been challenging
-- Little financial incentive to encourage consumers to recycle their own plastic waste
-
-## We barely recycle plastic!!.. 
+- To create a local network collection for puntual plastic material. 
 ]
 
 
@@ -90,9 +83,27 @@ background-size: contain
 *Kranzinger, L., Pomberger, R., Schwabl, D., Flachberger, H., Bauer, M., Lehner, M., Hofer, W., 2018. Output-oriented analysis of the wet mechanical processing of polyolefin-rich waste for feedstock recycling. Waste Manag. Res. 36, 445–453
 ]
 
+---
+
+# Gigabot
+
+.pull-left[ 
+- Print big
+]
+
+.pull-right[ 
+![Plastic waste](https://images.unsplash.com/photo-1537084642907-629340c7e59c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80)
+]
+
 
 
 ---
+
+# Hangprinter? 
+
+
+---
+
 class: middle, center
 
 
