--- a/01-Gigabot.Rmd
+++ b/01-Gigabot.Rmd
@@ -13,7 +13,7 @@ author:
     orcid_id: 0000-0001-8529-5327
   - first_name: "Laurent"
     last_name: "Dupont"
-    url: https://erpi.univ-lorraine.fr/people/Fabio-Cruz/
+    url: https://erpi.univ-lorraine.fr/people/Laurent-Dupont/
     affiliation: ERPI
     affiliation_url: https://erpi.univ-lorraine.fr/
     orcid_id: 0000-0002-8279-9690
