--- a/docs/slides/index.Rmd
+++ b/docs/slides/index.Rmd
@@ -8,7 +8,7 @@ date: "March, 2021 - INEDIT Monthly meeting – virtual seminar"
 #output: powerpoint_presentation
 output:
   xaringan::moon_reader:
-    css: ["assets/xaringan-themer.css", "assets/INEDIT.css"]
+    css: ["assets/xaringan-themer.css", "assets/Inedit.css"]
     seal: false
     nature:
 #      slideNumberFormat: "%current%"
@@ -48,9 +48,11 @@ URL = c('https://raw.githubusercontent.com/fabbiocrux/Figures/main/')
 # xaringanExtra
 xaringanExtra::use_panelset()
 
-xaringanExtra::use_share_again()
-```
+#xaringanExtra::use_share_again()
 
+
+
+```
 
 
 class: title-slide, left, bottom
@@ -72,7 +74,7 @@ knitr::include_graphics(paste0(URL, 'Logos/ERPI//UL-ERPI.png'))
 
 
 
-```{r xaringan-logo, echo=FALSE, include=TRUE}
+```{r xaringan-logo, echo=FALSE, include=FALSE}
 xaringanExtra::use_logo(
   image_url = "https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/background.svg",
   width = "100%",
@@ -82,6 +84,10 @@ xaringanExtra::use_logo(
 
 ```
 
+
+```{r xaringan-scribble, echo=FALSE}
+xaringanExtra::use_scribble()
+```
 
 
 # Goals the WP-6
