--- a/docs/slides/figures/Gantt/WP6/_Planning.Rmd
+++ b/docs/slides/figures/Gantt/WP6/_Planning.Rmd
@@ -21,7 +21,7 @@ header-includes:
 #bibliography: library.bib
 output:
   pdf_document:
-    keep_tex: true
+    keep_tex: false
 #csl: ieee.csl
 link-citations: yes
 linkcolor: blue
@@ -57,9 +57,9 @@ knitr::opts_chunk$set(echo = TRUE)
    
 \ganttgroup[name=T4, progress=10 ]{\color{blue}T6.4 3D printing of recycled plastic demonstrator}{2021-03}{2022-07}\\ 
 
-   \ganttbar[name=T4_1, progress=37]{Coordination and alignement with WP 4.3-4.4 tasks}{2021-03}{2021-09} \\
+   \ganttbar[name=T4_1, progress=50]{Coordination and alignement with WP 4.3-4.4 tasks}{2021-03}{2021-09} \\
    
-   \ganttbar[name=T4_2, progress=15 ]{Literature and Background on Additive manufacturing / Recycling / Sustainability}{2021-03}{2021-07}\\ 
+   \ganttbar[name=T4_2, progress=95 ]{Literature and Background on Additive manufacturing / Recycling / Sustainability}{2021-03}{2021-07}\\ 
       
    \ganttbar[name=T4_3 , progress=10 ]{Printability test on Virgin material for calibration purposes}{2021-04}{2021-12}\\ 
    
