--- a/index.Rmd
+++ b/index.Rmd
@@ -85,9 +85,7 @@ require(xaringanExtra)
 # Presentation from UL
 
 ```{r embed-xaringan, echo=FALSE}
-
-embed_xaringan(url = "slides/index.html", ratio = "16:9")
-
+xaringanExtra::embed_xaringan(url = "slides/index.html", ratio = "16:9")
 ```
 
 # Description of work
