--- a/docs/slides/index.Rmd
+++ b/docs/slides/index.Rmd
@@ -8,7 +8,7 @@ date: "March, 2021 - INEDIT Monthly meeting – virtual seminar"
 #output: powerpoint_presentation
 output:
   xaringan::moon_reader:
-    css: ["assets/xaringan-themer.css", "assets/Inedit.css"]
+    css: ["assets/xaringan-themer.css", "../assets/Inedit-total.css"]
     seal: false
     nature:
 #      slideNumberFormat: "%current%"
